# agentic-design

./: .dockerignore  .dockerignore.build  .gitignore  AI_DRIVEN_DEV.md  AI_INFERENCE_DEEP_ANALYSIS_2025.md  AI_INFERENCE_EXECUTIVE_SUMMARY.md  AUTH.md  CHAIN_OF_THOUGHT_DEEP_RESEARCH.md  CHAIN_OF_THOUGHT_VIDEO_SUMMARY.md  CLOUD_INFRA.md  DEBUG_AUDIO_INSTRUCTIONS.md  DOCKER_SETUP.md  Dockerfile  HIGHLIGHT_SETUP.md  IMPROVEMENTS.md  KATA_CONTAINERS.md  KNOWLEDGE_REPRESENTATION_PROGRESS.md  LEARNING_SYSTEM.md  MASTER_AGENTIC_PATTERNS_SUMMARY.md  MASTER_PROMPTING_ANALYSIS.md  MASTER_PROMPTING_COMPLETION_SUMMARY.md  MASTER_PROMPTING_FINAL_REFLECTION.md  OBJECTIVE.md  PLAUSIBLE_SETUP.md  PROMPT_CHAINING_OVERVIEW.md  PROMPT_FOR_VIBE_CODING.md  README-HIGHLIGHT.md  README-TTS-VIDEO.md  README.md  REPORT_13.md  SEQUENTIAL_CHAINING_WORKING_CODE.md  TODO.md  UI_UX_IMPROVEMENTS.md  UI_UX_VISUAL_GUIDE.md  VOICE.md  WORKSHOP_SYSTEM_ARCHITECTURE.md  WORKSHOP_TESTING_GUIDE.md  agentic-design-analysis.md  ai-agent-patterns.md  build_output.txt  (+26 more)
.secrets/: secret_1755937598084_e8ozmcjie.json  secret_1755938404650_o0gy5zps4.json
TAXONOMY/: 0.md  1.md  23h38claude_research.md  23h42_chatgpt.md  23h48_claude.md  claude.md  deepseek.md  mistral.md  qwen.md
api/: API_USAGE.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.firecracker  README.md  README_FIRECRACKER.md  build_vm_images.py  docker-compose.firecracker-prod.yml  docker-compose.firecracker.yml  docker-compose.yml  final_security_test.sh  firecracker_docker_hybrid.py  firecracker_manager.py  firecracker_manager_filesystem.py  guest_agent.py  guest_agent_filesystem.py  main.py  quick_test.py  requirements.txt  security_config.py  setup_firecracker.sh  setup_firecracker_production.sh  simple_secure_executor.py  simple_test.sh  start_firecracker_container.sh  start_firecracker_production.sh  test_filesystem_executor.py  test_firecracker_solution.py  test_tsx_integration.py
backend/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  LEARNING_HUB_API.md  Makefile  PRODUCTION_DEPLOYMENT.md  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  init-letsencrypt.sh  mikro-orm.config.ts  package-lock.json  package.json  rebuild-dev.sh  rebuild_firecracker.sh  renew-certs.sh  tsconfig.json
codesandbox/: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  Dockerfile  Makefile  NETWORK_ARCHITECTURE.md  PRODUCTION.md  QUICKSTART.md  README.md  REPORT.md  (+20 more)
codesandbox-rust/: Cargo.toml  Dockerfile  Makefile  QUICKSTART.md  README.md  kill-port-8000.sh  run.sh  start.sh  test-api.sh
codesandbox-rust/scripts/: codesandbox-rust.service
codesandbox-rust/src/: error.rs  executor.rs  lib.rs  network.rs  types.rs  vm.rs
examples/rust/: Cargo.toml  README.md
examples/rust/src/: chain_of_thought.rs  constitutional_ai.rs  react_pattern.rs  sequential_chaining.rs  tree_of_thought.rs
prompt-optimizer/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_bootstrap_fix.py  test_dspy_simple.py  test_metric_debug.py  test_native_dspy.py  test_raw_prediction.py  test_request.json  test_service.py  test_simple.py
prompt-optimizer/src/app/: dependencies.py  main.py  simple_main.py
prompt-optimizer/src/app/api/: routes.py
prompt-optimizer/src/app/core/: config.py  optimization_service.py
prompt-optimizer/src/app/middleware/: auth.py  exceptions.py
prompt-optimizer/src/domain/: entities.py  ports.py  prompt_guides.py
prompt-optimizer/src/infrastructure/: advanced_dspy_optimizer.py  dspy_optimizer.py  gepa_optimizer.py  memory_repository.py  simple_optimizer.py
(+1578 files in other folders)
