[package]
name = "codesandbox-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"

[dependencies]
# HTTP server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1.0", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async process execution
tokio-process = "0.2"

# Network configuration
nix = { version = "0.27", features = ["socket", "net"] }

# File operations
fs_extra = "1.3"

# Process management
libc = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# System calls and resource limits
rlimit = "0.10"

# Environment variables
dotenv = "0.15"

# Concurrency
arc-swap = "1.6"
parking_lot = "0.12"

# Firecracker integration (using direct API calls)
bytes = "1.5"

# Regular expressions
regex = "1.10"