[package]
name = "agentic-design-patterns"
version = "1.0.0"
edition = "2021"
description = "Rust examples for agentic design patterns"
authors = ["Agentic Design Team"]

[[bin]]
name = "chain_of_thought"
path = "src/chain_of_thought.rs"

[[bin]]
name = "tree_of_thought"
path = "src/tree_of_thought.rs"

[[bin]]
name = "react_pattern"
path = "src/react_pattern.rs"

[[bin]]
name = "constitutional_ai"
path = "src/constitutional_ai.rs"

[[bin]]
name = "sequential_chaining"
path = "src/sequential_chaining.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
regex = "1.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pattern_benchmarks"
harness = false